--- a/css/utilities.css
+++ b/css/utilities.css
@@ -6,6 +6,14 @@
     background-color: rgba(255, 0, 0, 0.1);
 }
 
+.h300{
+    height: 300px;
+}
+
+.w600{
+    width: 600px;
+}
+
 .h500{
     height: 500px;
 }
