--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,22 @@
     margin: 30px 0;
 }
 
+/* form section */
+#form button{
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: rgb(26, 188, 156);
+    color: white;
+    border: none;
+}
+
+#form ul{
+    padding-left: 0;
+}
+
+#form li{
+    border-bottom: 1px solid rgb(206, 206, 206);
+}
 .form-container{
     width: 60%;
     margin: 0 auto;
