--- a/css/style.css
+++ b/css/style.css
@@ -79,12 +79,35 @@
 }
 
 /* form section */
+#form{
+    justify-content: center;
+    align-items: center;
+}
+
+input{
+    border: none;
+}
+
+input::placeholder{
+    color: rgb(45, 62, 80);
+    
+}
+
+textarea::placeholder{
+    color: rgb(45, 62, 80);
+}
+
 #form button{
     padding: 5px 10px;
     border-radius: 5px;
     background-color: rgb(26, 188, 156);
     color: white;
     border: none;
+    margin-bottom: 20px;
+}
+
+#form button:hover{
+    background-color: rgb(30, 130, 107);
 }
 
 #form ul{
@@ -99,15 +122,7 @@
     margin: 0 auto;
 }
 
-/* FORM */
-#form{
-    justify-content: center;
-    align-items: center;
-}
 
-input{
-    border: none;
-}
 
 /* FOOTER */
 #contact-info{
