--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,11 @@
     margin: 30px 0;
 }
 
+#about button:hover{
+    background-color: white;
+    color: rgb(60, 75, 92);
+}
+
 /* form section */
 #form{
     justify-content: center;
