--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,39 @@
     margin-bottom: 20px;
 }
 
+#portfolio .col-md-6{
+    position: relative;
+}
+
+.imgs-over{
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    border-radius: 10px;
+    width: 95%;
+    height: 100%;
+    background-color: rgb(32, 136, 114, 0.5);
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+}
+
+.imgs-over i{
+    font-size: 40px;
+    padding: 100px;
+    border-radius: 50%;
+    background-color: rgb(32, 136, 114, 0.5);
+    color: white;
+    display: none;
+}
+
+.imgs-over:hover{
+    opacity: 1;
+}
+
+.imgs-over:hover i{
+    display: block;
+}
 /* about section */
 #about{
     background-color: rgb(26, 188, 156);
