--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@
     margin-bottom: 20px;
 }
 
-#portfolio .col-md-6{
+.first-layer{
     position: relative;
 }
 
@@ -68,7 +68,7 @@
     position: absolute;
     top: 0;
     border-radius: 10px;
-    width: 95%;
+    width: 100%;
     height: 100%;
     background-color: rgb(32, 136, 114, 0.5);
     justify-content: center;
@@ -78,7 +78,7 @@
 
 .imgs-over i{
     font-size: 40px;
-    padding: 100px;
+    padding: 24%;
     border-radius: 50%;
     background-color: rgb(32, 136, 114, 0.5);
     color: white;
